--- a/mainwindowstarlight.ui
+++ b/mainwindowstarlight.ui
@@ -54,6 +54,9 @@
    </property>
   </action>
   <action name="action_Fermer">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>&amp;Fermer</string>
    </property>
